force-app/src/objects/EventApi__Track__c.object
<CustomObject>
    <description>Tracks enable users to filter and easily register for schedule items.</description>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>**Required** Linked the to related event.</description>
        <inlineHelpText>**Required** Linked the to related event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Tracks</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Track_Color__c</fullName>
        <description>The value defined in this field defines the hex color used to display in the event micro site.</description>
        <inlineHelpText>The value defined in this field defines the hex color used to display in the event micro site.</inlineHelpText>
        <label>Track Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileApi__Guide__c</fullName>
        <formula>EventApi__Event__r.MobileApi__Guide__c</formula>
        <label>Guide ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobileApi__Schedule_Track_Id__c</fullName>
        <externalId>true</externalId>
        <label>Schedule Track ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Track</label>
    <nameField>
        <label>Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>